<?xml version="1.0" encoding="utf-8"?>
<!--
 * Calorie Intake Calculator
 * Copyright (C) 2009 Bryan Emmanuel
 * 
 * This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *  
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.

 *  You should have received a copy of the GNU General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *  
 *  Bryan Emmanuel piusvelte@gmail.com
-->
<resources>
    <string name="app_name">Calorie Intake Calculator Pro</string>
    <string name="lbl_gender">Gender</string>
    <string name="male">Male</string>
    <string name="lbl_age">Age</string>
    <string name="lbl_weight">Weight (lb)</string>
    <string name="lbl_height">Height (in)</string>
    <string name="maintain_weight">Maintain</string>
    <string name="moderately_active">Moderate</string>
    <string name="lbl_activity">Activity Level</string>
    <string name="lbl_goal">Weight goal</string>
    <string name="lbl_bmr">BMR</string>
    <string name="def_bmr">Basal Metabolic Rate</string>
    <string name="lbl_tdee">TDEE</string>
    <string name="def_tdee">Total Daily Energy Expenditure</string>
    <string name="lbl_total_calories">Target Daily Calories</string>
    <string name="lbl_chg_calories">Daily Caloric Change</string>
    <string name="lbl_calculate">Calculate</string>
    <string name="lbl_about">About</string>
    <string name="lbl_additional">Additional calories</string>
    <string name="lbl_duration">Duration (min)</string>
    <string name="lbl_add">Add</string>
    <string name="key_preferences">cic_preferences</string>
    <string name="key_gender">gender</string>
    <string name="key_age">age</string>
    <string name="key_weight">weight</string>
    <string name="key_height">height</string>
    <string name="key_goal">goal</string>
    <string name="key_activity">activity</string>
    <string name="key_weight_unit">weight_unit</string>
    <string name="key_height_unit">height_unit</string>
    <string name="about">Calorie Intake Calculator\u000A\u000AEstimate daily calorie requirements based on the Harris-Benedict formula.\u000A\u000ACopyright (C) 2009 Bryan Emmanuel\u000A\u000AThis program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\u000A\u000AThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\u000A\u000AYou should have received a copy of the GNU General Public License along with this program.  If not, see \u003C\u000Ahttp://www.gnu.org/licenses/\u003E.\u000A\u000ABryan Emmanuel piusvelte@gmail.com</string>
</resources>